making front end look similar to prev app

--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<h1><a href="http://yournotez.com">yournotez.com</a></h1>
+<h3>Browser notes, available in your inbox anytime</h3>
+
+<div>
+    <textarea>
+        Type your locally stored notes here:
+    </textarea><br>
+    <input type="submit">
+</div>
+
+
