--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -2,9 +2,7 @@
 <h3>Browser notes, available in your inbox anytime</h3>
 
 <div>
-    <textarea>
-        Type your locally stored notes here:
-    </textarea><br>
+    <textarea placeholder="Type your locally stored notes here:"></textarea><br>
     <input type="submit">
 </div>
 
