--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -2,8 +2,14 @@
 <h3>Browser notes, available in your inbox anytime</h3>
 
 <div>
-    <textarea placeholder="Type your locally stored notes here:"></textarea><br>
-    <input type="submit">
+    <textarea #note placeholder="Type your locally stored notes here:"></textarea><br>
+    <input type="submit" (click)="onSubmit(note.value)">
+    <!-- <input type="button" value="Submit" (click)="onSubmit()" /> -->
+    <!-- <input type="button" value="Call" (click)="callPhone(phone.value)" /> -->
+
+
 </div>
+
+
 
 
