note taking functionality back online

--- a/yournotez/src/app/body/body.component.html
+++ b/yournotez/src/app/body/body.component.html
@@ -1,7 +1,5 @@
-<!-- <p>body works!</p> -->
-<div>
-    <!-- <p id="one">{{data}}</p>
-    <p id="two">{{anotherData}}</p> -->
-
-    This should house all the divs, but we can work on localStorage first
+<br>
+<div id="note" *ngFor="let note of notes"> 
+    {{note}}
 </div>
+
