focus works on text area. now we can focus on clearing text area before moving on to the background color and email functionality

--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <h3>Browser notes, available in your inbox anytime</h3>
 
 <div>
-    <textarea #note placeholder="Type your locally stored notes here:"></textarea><br>
+    <textarea #note placeholder="Type your locally stored note here:"></textarea><br>
     <input type="submit" (click)="onSubmit(note.value)">&nbsp;&nbsp;&nbsp;
     <input type="submit" value="Delete All" (click)="clearAll()">
     <!-- <input type="button" value="Submit" (click)="onSubmit()" /> -->
