--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -8,7 +8,7 @@
     <input id="clear" type="submit" (click)="clearAll()" value="Delete All">
 </div>
 
-<div *ngFor="let note of allnotes">
+<div id="note" *ngFor="let note of allnotes">
     <div id="container" [ngStyle]="{'background-color': note.color}">{{note.note}}<br></div>
 </div>
 
