--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -5,7 +5,8 @@
     <input id="notes" #notes type="text" autofocus placeholder="Enter notes here"><br><br>
     <input id="submit" type="submit" (click)="onSubmit(notes.value)" value="Enter Note">
     &nbsp;
-    <input id="clear" type="submit" (click)="clearAll()" value="Delete All">
+    <input id="clear" type="submit" (click)="clearAll()" value="Delete All">&nbsp;
+    <!-- <input id="export" type="submit" (click)="export()" value="Export as PDF"> -->
 </div>
 
 <div id="note" *ngFor="let note of allnotes">
