--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -6,13 +6,14 @@
     <input id="submit" type="submit" (click)="onSubmit(notes.value)" value="Enter Note">
     &nbsp;
     <input id="clear" type="submit" (click)="clearAll()" value="Delete All">&nbsp;
+    <input id="export" type="submit" (click)="export()" value="Export">&nbsp;
     <br>
-    <label>Export as: </label>
+    <!-- <label>Export as: </label>
     <select id="export">
         <option value="pdf">None</option>
-        <option value="pdf">PDF</option>
+        <option value="pdf" (click)="export()">PDF</option>
         <option value="Cloud Option">Cloud Option</option>
-    </select>
+    </select> -->
     <br>
 </div>
 <br>
