delete specific note beginnings

--- a/yournotez/src/app/header/header.component.html
+++ b/yournotez/src/app/header/header.component.html
@@ -18,6 +18,8 @@
 </div>
 <br>
 <div id="note" *ngFor="let note of allnotes">
-    <div id="container" [ngStyle]="{'background-color': note.color}">{{note.note}}<br></div>
+    <!-- <div id="container" [ngStyle]="{'background-color': note.color}">{{note.note}}<button>Delete</button><br></div> -->
+    <div id="container" [ngStyle]="{'background-color': note.color}">{{note.note}}<br></div>    
+
 </div>
 
